--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ list-style:none;
    margin: 0 ; 
 }
 #container heager ul li {
-disolay: inline-block;
+display: inline-block;
   margin-right: 10px;
   
 }
