--- a/style.css
+++ b/style.css
@@ -7,14 +7,18 @@ border: 1px dashed black;
  margin: 0 auto; 
 
 }
-#container heager ul {
+#container header ul {
 list-style:none;
   padding:0;
    margin: 0 ; 
 }
-#container heager ul li {
+#container header ul li {
 display: inline-block;
   margin-right: 10px;
+  
+}
+#container header ul li a  {
+text-decoration: none;
   
 }
 
