--- a/style.css
+++ b/style.css
@@ -1,11 +1,16 @@
 html, body {
-margin: 0 ;
-} 
+ margin: 0;
+  font-family:'Titillium web', sans-serif; 
+}
 #container{
 border: 1px dashed black;
-  width:500px
+ width:500px
  margin: 0 auto; 
 
+}
+#container header {
+padding: 0 20px;
+ position: relative; 
 }
 #container header ul {
 list-style:none;
