--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 html, body {
  margin: 0;
-  font-family:'Titillium web', sans-serif; 
+  font-family: "Times New Roman", Times, serif;
 }
 #container{
 border: 1px dashed black;
- width:500px
+ width: 500px
  margin: 0 auto; 
 
 }
@@ -13,8 +13,8 @@ padding: 0 20px;
  position: relative; 
 }
 #container header ul {
-list-style:none;
-  padding:0;
+list-style: none;
+  padding: 0;
    margin: 0 ; 
 }
 #container header ul li {
@@ -25,8 +25,8 @@ display: inline-block;
 #container header ul li a  {
 text-decoration: none;
   color: white;
-  background-color: dodgerblue;
-  padding: Spx;
+  background-color: cyan;
+  padding: 5px;
   display: block;
 }
 
