--- a/style.css
+++ b/style.css
@@ -16,12 +16,12 @@ position: relative;
 #container header ul {
 text-align: center;
 list-style: none;
-font-family: "Times New Roman", Times, serif;
 padding: 0;
 margin: 0 ; 
  
 }
 #container header ul li {
+font-family: "Trebuchet MS", Helvetica, sans-serif;
 display: inline-block;
   margin-right: 10px;
   
