--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ display: inline-block;
   
 }
 #container header ul li a  {
+ background-color: #00FFFF; 
 text-decoration: none;
   padding: 5px;
   display: block;
