--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ text-decoration: none;
   display: block;
 }
 .button {
-  background-color: #4CAF50;
+  background-color: #344960;
   border: none;
   color: white;
   padding: 15px 32px;
