--- a/style.css
+++ b/style.css
@@ -33,5 +33,10 @@ text-decoration: none;
   padding: 5px;
   display: block;
 }
+.thumb {
+        height: 75px;
+        border: 1px solid #000;
+        margin: 10px 5px 0 0;
+    }
 
 
